--- a/main.tex
+++ b/main.tex
@@ -2511,7 +2511,7 @@ Sei $I \subseteq R$ ein Ideal.
 \end{defini}
 
 \begin{bem}\label{bem:primideal_maximalideal_faktorring}
-Sei $I \subseteq R$ ein Primideal. Dann gilt:
+Sei $I \subseteq R$ ein Ideal. Dann gilt:
 \begin{itemize}
     \item[(a)] $I$ ist Primideal $\iff R / I$ ist ein Integritätsring.
     \item[(b)] $I$ ist maximales Ideal $\iff R / I$ ist ein Körper.
