--- a/main.tex
+++ b/main.tex
@@ -2749,19 +2749,16 @@ Sei $R$ ein Integritätsring. Dann gilt:
 \[
 (r_1, s_1) \sim (r_2, s_2) \quad \text{genau dann, wenn} \quad r_1 s_2 = r_2 s_1.
 \]
-Man rechnet nach, dass $\sim$ eine Äquivalenzrelation ist. 
-
-Wir setzen $K := (R \times (R \setminus \{0\}))/\sim$ (Menge der Äquivalenzklassen).
-
-Wir bezeichnen die Klasse von $(r, s) \in R \times (R \setminus \{0\})$ mit $[r, s]$.
-
-Wir definieren 
-\[
-[r_1, s_1] + [r_2, s_2] := [r_1 s_2 + r_2 s_1, s_1 s_2],
-\]
-\[
-[r_1, s_1] \cdot [r_2, s_2] := [r_1 r_2, s_1 s_2].
-\]
+Man rechnet nach, dass $\sim$ eine Äquivalenzrelation ist (beim Nachweis der Transitivität
+verwendet man, dass $R$ ein Integritätsring ist). Wir setzen 
+\[K := (R \times (R \setminus \{0\}))/\sim,\]
+betrachten also die Menge der Äquivalenzklassen bzgl. $\sim$.
+Wir bezeichnen die Äquivalenzklasse von $(r, s) \in R \times (R \setminus \{0\})$ mit $[r, s]$
+und definieren 
+\begin{align*}
+[r_1, s_1] + [r_2, s_2] &:= [r_1 s_2 + r_2 s_1, s_1 s_2],\\
+[r_1, s_1] \cdot [r_2, s_2] &:= [r_1 r_2, s_1 s_2].
+\end{align*}
 Man rechnet nach, dass $K$ damit ein Körper wird (Nullelement: $[0,1]$, Einselement: $[1,1]$, $[s,r]$ ist das Inverse zu $[r,s]$). Wir definieren 
 \[\iota \colon R \to K, \quad r \mapsto [r,1].\]
 Dann ist $\iota$ ein injektiver Ringhomomorphismus.
