--- a/main.tex
+++ b/main.tex
@@ -2228,7 +2228,7 @@ d.h. $\overline{\varphi} \circ \pi = \varphi$. Explizit ist $\overline{\varphi}$
 \begin{satz}[Homomorphiesatz für Ringe]\label{satz:homomorphiesatz_ring}
 Sei $\varphi \colon R \to S$ ein Ringhomomorphismus. Dann gibt es einen eindeutig bestimmten Ringisomorphismus
 \[
-\overline{\varphi} \colon R / \ker \varphi \to \image \varphi,
+\Phi \colon R / \ker \varphi \to \image \varphi,
 \]
 sodass das folgende Diagramm kommutiert:
 \[
